Fixed CSS width to make app display better on mobile.

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,6 @@ body {
 }
 
 #wrapper {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,7 +19,6 @@ body {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 450px;
   padding: 40px 50px;
   display: table;
   background-color: white;
@@ -33,7 +30,6 @@ body {
 }
 
 #quote-box .buttons {
-  width: 450px;
   margin: auto;
   display: block;
 }
@@ -59,7 +55,7 @@ body {
   padding: 0px;
   padding-top: 8px;
   text-align: center;
-  font-size: 1.2em;
+  font-size: 1em;
   margin-right: 5px;
   height: 30px;
   width: 40px;
